Bugfix kss-markup overflow issue

--- a/kss-assets/styles/_content-area.scss
+++ b/kss-assets/styles/_content-area.scss
@@ -348,6 +348,10 @@
     pre {
       margin: 0;
     }
+
+    code {
+      word-break: break-word;
+    }
   }
 
   .kss-colors {
